--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
+    "multer": "^2.0.2",
+    "mysql2": "^3.14.3",
+    "next": "15.5.2",
+    "next-connect": "^1.0.0",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "react-hook-form": "^7.62.0",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "15.5.2"
   }
 }
