--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.12",
+    "cloudinary": "^2.7.0",
     "formidable": "^3.5.4",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
